fix bug that icons and all off button are too close in QuickPostForm of Conversation

--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -235,7 +235,8 @@ div#posters img.poster:hover:active {
   height: 22px;
   cursor: pointer;
   position: relative;
-  top: -11px;
+  top: 5px;
+  vertical-align: top;
 }
 #all_off:hover {
   background-color: gray;
